<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/_10sdp"
    android:orientation="vertical"
    app:chainUseRtl="true">

    <TextView
        android:id="@+id/tv_d_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:text="@string/select_image_action"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_d_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_16sdp"
        android:layout_margin="@dimen/_30sdp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:text="@string/ibl_camera"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        app:drawableTopCompat="@drawable/ic_vector_photo_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_gallery"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_d_title" />

    <TextView
        android:id="@+id/tv_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_30sdp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:padding="@dimen/_16sdp"
        android:text="@string/ibl_gallery"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        app:drawableTopCompat="@drawable/ic_vector_gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/tv_d_camera"
        app:layout_constraintTop_toBottomOf="@+id/tv_d_title" />

</androidx.constraintlayout.widget.ConstraintLayout>